Исправляет путь картинок в html

--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -5,8 +5,8 @@
   align-items: center;
   padding-top: 26px;
   text-align: center;
-  color: #fff;
-  background-image: url(/source/img/index-background-mobile@1x.jpg);
+  color: rgb(255, 255, 255);
+  background-image: url(img/index-background-mobile@1x.jpg);
   background-color: rgb(101, 169, 60);
   background-size: 100% 305px;
   background-position: center top;
