Добавляет блок page-main.scss

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -27,7 +27,7 @@
   padding: 6px 0;
   font-size: 18px;
   line-height: 25px;
-  color: rgb(17, 17, 17);
+  color: $font-color;
   border-bottom: 2px solid transparent;
 }
 
