--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -5,7 +5,7 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 60px;
-  color: rgb(17, 17, 17);
+  color: $font-color;
 }
 
 .catalog__list {
