--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -9,7 +9,7 @@
   width: 140px;
   font-size: 16px;
   line-height: 20px;
-  color: rgb(17, 17, 17);
+  color: $font-color;
   text-transform: uppercase;
 }
 
