--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -12,7 +12,7 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 60px;
-  color: rgb(17, 17, 17);
+  color: $font-color;
 }
 
 .example__content {
