--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -17,7 +17,7 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 23px 20px 18px;
-  color: rgb(17, 17, 17);
+  color: $font-color;
   background-color: rgb(243, 256, 256);
   background-repeat: no-repeat;
 }
@@ -30,7 +30,7 @@
 }
 
 .program--slim::before {
-	background-color: rgb(104, 183, 56);
+	background-color: $base-color;
 	border-radius: 50%;
 	left: 22px;
 	width: 50px;
@@ -38,7 +38,7 @@
 
 
 .program--pro::before {
-	background-color: rgb(104, 183, 56);
+	background-color: $base-color;
 	border-radius: 50%;
 	content: "";
 	height: 50px;
@@ -73,6 +73,6 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
-  color: rgb(17, 17, 17);
+  color: $font-color;
   text-transform: uppercase;
 }
