--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,7 +2,7 @@
 @import "blocks/catalog.scss";
 @import "blocks/contacts.scss";
 @import "blocks/example.scss";
-@import "blocks/features.scss";
+@import "blocks/advantages.scss";
 @import "blocks/page-header.scss";
 @import "blocks/page-main.scss";
 @import "blocks/page-footer.scss";
@@ -49,7 +49,7 @@ a {
   text-align: center;
   padding-top: 10px;
   padding-bottom: 9px;
-  background-color: rgb(104, 183, 56);
+  background-color: $base-color;
   outline: 0;
   cursor: pointer;
 }
