--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,15 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
+@import "blocks/advantages.scss";
+@import "blocks/button.scss";
 @import "blocks/catalog.scss";
 @import "blocks/contacts.scss";
+@import "blocks/copyright.scss";
+@import "blocks/container.scss";
 @import "blocks/example.scss";
-@import "blocks/advantages.scss";
+@import "blocks/main-menu.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/more.scss";
 @import "blocks/page-header.scss";
 @import "blocks/page-main.scss";
+@import "blocks/product.scss";
+@import "blocks/program.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/programs.scss";
 @import "blocks/promo.scss";
+@import "blocks/social.scss";
 @import "mixins.scss";
 @import "variables.scss";
+@import "visually-hidden.scss";
 
 html {
   box-sizing: border-box;
@@ -23,33 +33,8 @@ body {
   color: rgb(68, 68, 68);
 }
 
-.visually-hidden {
-	border: 0;
-	clip: rect(0 0 0 0);
-	height: 1px;
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	white-space: nowrap;
-	width: 1px;
-}
-
 a {
   background-color: transparent;
   text-decoration: none;
 }
 
-.button {
-  display: block;
-  font-size: 16px;
-  line-height: 20px;
-  text-transform: uppercase;
-  color: rgb(255, 255, 255);
-  text-align: center;
-  padding-top: 10px;
-  padding-bottom: 9px;
-  background-color: $base-color;
-  outline: 0;
-  cursor: pointer;
-}
