--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -6,7 +6,7 @@
   padding-top: 26px;
   text-align: center;
   color: rgb(255, 255, 255);
-  background-image: url(../../img/index-background-mobile@1x.jpg);
+  background-image: url(../index-background-mobile@1x.jpg);
   background-color: $base-color;
   background-size: 100% 305px;
   background-position: center top;
