--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -22,7 +22,7 @@
   margin-bottom: 20px;
   font-size: 14px;
   line-height: 18px;
-  font-family: "Arial","Helvetica",sans-serif;
+  font-family: "Arial", "Helvetica", sans-serif;
   color: rgb(68, 68, 68);
 }
 
@@ -38,25 +38,25 @@
 }
 
 .advantages__item--leaf::before {
-  background-image: url(../../img/advantage-leaf@1x.png);
+  background-image: url(../advantage-leaf@1x.png);
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .advantages__item--powder::before {
-  background-image: url(../../img/advantage-powder@1x.png);
+  background-image: url(../advantage-powder@1x.png);
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .advantages__item--dining::before {
-  background-image: url(../../img/advantage-dining@1x.png);
+  background-image: url(../advantage-dining@1x.png);
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .advantages__item--clock::before {
-  background-image: url(../../img/advantage-clock@1x.png);
+  background-image: url(../advantage-clock@1x.png);
   background-position: center;
   background-repeat: no-repeat;
 }
