--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,10 +1,11 @@
+@import "variables.scss";
+@import "mixins.scss";
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 @import "blocks/advantages.scss";
 @import "blocks/button.scss";
 @import "blocks/catalog.scss";
 @import "blocks/contacts.scss";
 @import "blocks/copyright.scss";
-@import "blocks/container.scss";
 @import "blocks/example.scss";
 @import "blocks/main-menu.scss";
 @import "blocks/main-nav.scss";
@@ -17,16 +18,13 @@
 @import "blocks/programs.scss";
 @import "blocks/promo.scss";
 @import "blocks/social.scss";
-@import "mixins.scss";
-@import "variables.scss";
-@import "visually-hidden.scss";
 
 html {
   box-sizing: border-box;
 }
 
 body {
-	font-family: "Oswald","Arial","Helvetica",sans-serif;
+  font-family: "Oswald", "Arial", "Helvetica", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
@@ -36,5 +34,17 @@ body {
 a {
   background-color: transparent;
   text-decoration: none;
+}
+
+.visually-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
 
