--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,7 +8,6 @@
 @import "blocks/copyright.scss";
 @import "blocks/example.scss";
 @import "blocks/main-menu.scss";
-@import "blocks/main-nav.scss";
 @import "blocks/more.scss";
 @import "blocks/page-header.scss";
 @import "blocks/page-main.scss";
@@ -24,11 +23,20 @@ html {
 }
 
 body {
+  min-width: 320px;
+  margin: 0 auto;
+  padding: 0;
+
   font-family: "Oswald", "Arial", "Helvetica", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
   color: rgb(68, 68, 68);
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 a {
@@ -47,4 +55,6 @@ a {
   white-space: nowrap;
   width: 1px;
 }
+
+
 
