Добавляет адаптивные сетки

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -9,13 +9,13 @@
   width: 140px;
   font-size: 16px;
   line-height: 20px;
-  color: $font-color;
+  color: $title-color;
   text-transform: uppercase;
 }
 
 .contacts__adress {
   width: 140px;
-  color: rgb(68, 68, 68);
+  color: $content-color;
   font-family: "Arial", "Helvetica", sans-serif;
   font-size: 14px;
   line-height: 20px;
