--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,40 +1,86 @@
-.advantages_title {
+.advantages__title {
   margin: 17px 0 28px;
   font-weight: 400;
   font-size: 36px;
   line-height: 60px;
-  color: $font-color;
+  color: $title-color;
+}
+
+@media (min-width: $tablet-width) {
+	.advantages__title {
+    margin: 46px 0;
+		font-size: 60px;
+		line-height: 60px;
+	}
 }
 
 .advantages__list {
-  margin: 0;
-  padding: 0;
-  display: flex;
+	display: flex;
   flex-direction: column;
-  list-style: none;
+  margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+@media (min-width: $tablet-width) {
+	.advantages__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+		justify-content: space-between;
+	}
 }
 
 .advantages__item {
-  position: relative;
-  display: flex;
-  align-items: center;
-  min-height: 60px;
-  margin-bottom: 20px;
-  font-size: 14px;
-  line-height: 18px;
-  font-family: "Arial", "Helvetica", sans-serif;
-  color: rgb(68, 68, 68);
+	align-items: center;
+	color: $content-color;
+	display: flex;
+	font-family: "Arial","Helvetica",sans-serif;
+	font-size: 14px;
+	line-height: 18px;
+	margin-bottom: 20px;
+	min-height: 60px;
+	padding-left: 80px;
+	position: relative;
+}
+
+@media (min-width: $tablet-width) {
+	.advantages__item {
+		font-size: 16px;
+		line-height: 24px;
+		margin: 25px 0 106px;
+		padding: 113px 79px 0 0;
+		width: 203px;
+	}
+}
+
+@media (min-width: $desktop-width) {
+	.advantages__item {
+		margin-bottom: 20px;
+		padding: 110px 0 50px;
+		width: 245px;
+	}
 }
 
 .advantages__item::before {
-  content: "";
-  display: block;
-  flex-shrink: 0;
-  margin-right: 20px;
-  width: 60px;
-  height: 60px;
-  background-color: $base-color;
-  background-size: 50px;
+	background-color: $base-color;
+	background-position: center;
+	background-repeat: no-repeat;
+	content: "";
+	height: 60px;
+	left: 0;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 60px;
+}
+
+@media (min-width: $tablet-width) {
+	.advantages__item::before {
+		height: 80px;
+		top: 0;
+		transform: translateY(0);
+		width: 80px;
+	}
 }
 
 .advantages__item--leaf::before {
