--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,16 +1,46 @@
+.catalog {
+	display: flex;
+	flex-direction: column;
+}
 .catalog__title {
-  margin-top: 15px;
-  margin-bottom: 27px;
+  color: $title-color;
   font-weight: 400;
-  font-size: 36px;
-  line-height: 60px;
-  color: $font-color;
+	font-size: 36px;
+	line-height: 60px;
+	margin-bottom: 27px;
+	margin-top: 15px;
+	padding: 0 ;
+}
+
+@media (min-width: $tablet-width) {
+	.catalog__title {
+		font-size: 60px;
+		line-height: 60px;
+		margin-bottom: 25px;
+		margin-top: 27px;
+		padding: 0;
+	}
+}
+
+@media (min-width: $desktop-width) {
+	.catalog__title {
+		margin-top: 12px;
+	}
 }
 
 .catalog__list {
-  margin: 0;
+	margin: 0;
   padding: 0;
   list-style: none;
+}
+
+@media (min-width:768px) {
+	.catalog__list {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
 }
 
 
