--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,5 +1,5 @@
 .example {
-  background-color: rgb(242, 242, 242);
+  background-color: $bg-color;
   display: flex;
   flex-direction: column;
   margin-top: 22px;
@@ -12,7 +12,7 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 60px;
-  color: $font-color;
+  color: $title-color;
 }
 
 .example__content {
@@ -21,5 +21,5 @@
   font-size: 14px;
   line-height: 18px;
   font-family: "Arial", "Helvetica", sans-serif;
-  color: rgb(68, 68, 68);
+  color: $content-color;
 }
