--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -1,38 +1,73 @@
 .program {
-  position: relative;
+  align-items: flex-start;
+  background-color: $bg-color;
+  background-origin: content-box;
+  background-repeat: no-repeat;
+  color: $title-color;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   padding: 23px 20px 18px;
-  color: $font-color;
-  background-color: rgb(243, 256, 256);
-  background-repeat: no-repeat;
+  position: relative;
+}
+
+.program--slim::after,
+.program--slim::before {
+	content: "";
+	height: 50px;
+	position: absolute;
+	top: 27px;
 }
 
 .program--slim::before {
-  content: "";
-  height: 50px;
-  position: absolute;
-  top: 27px;
+	background-color: $base-color;
+	border-radius: 50%;
+	left: 22px;
+	width: 50px;
 }
-
-.program--slim::before {
-  background-color: $base-color;
-  border-radius: 50%;
-  left: 22px;
-  width: 50px;
-}
-
 
 .program--pro::before {
-  background-color: $base-color;
-  border-radius: 50%;
-  content: "";
-  height: 50px;
-  left: 22px;
-  position: absolute;
-  top: 23px;
-  width: 50px;
+	background-color: $base-color;
+	border-radius: 50%;
+	content: "";
+	height: 50px;
+	left: 22px;
+	position: absolute;
+	top: 23px;
+	width: 50px;
+}
+
+@media (min-width: $tablet-width) {
+	.program {
+		margin-top: 27px;
+		padding: 78px 280px 60px 53px;
+	}
+}
+
+@media (min-width: $desktop-width) {
+	.program {
+		padding-right: 50px;
+  }
+  
+	.program--slim::before {
+		height: 100px;
+		left: 51px;
+		top: 49px;
+		width: 100px;
+  }
+  
+	.program--slim::after {
+		height: 98px;
+		left: 65px;
+		top: 40px;
+		width: 71px;
+  }
+  
+	.program--pro::before {
+		height: 100px;
+		left: 51px;
+		top: 49px;
+		width: 100px;
+	}
 }
 
 .program__title {
@@ -45,14 +80,45 @@
   text-transform: uppercase;
 }
 
+@media (min-width: $tablet-width) {
+	.program__title {
+		font-size: 36px;
+		line-height: 37px;
+		margin-bottom: 24px;
+		margin-left: 0;
+		margin-top: 0;
+	}
+}
+
+@media (min-width: $desktop-width) {
+	.program__title {
+		margin-bottom: 72px;
+		margin-left: 160px;
+	}
+}
+
 .program__description {
   margin: 0 0 18px;
   padding-bottom: 23px;
   font-size: 14px;
   line-height: 18px;
   font-family: "Arial", "Helvetica", sans-serif;
-  color: rgb(68, 68, 68);
+  color: $content-color;
   border-bottom: 1px solid rgb(217, 217, 217);
+}
+
+@media (min-width: $tablet-width) {
+	.program__description {
+		border-bottom: none;
+		font-size: 16px;
+		line-height: 24px;
+		margin-bottom: 36px;
+	}
+}
+@media (min-width: $desktop-width) {
+	.program__description {
+		margin-bottom: 10px;
+	}
 }
 
 .program__link {
@@ -60,6 +126,6 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
-  color: $font-color;
+  color: $title-color;
   text-transform: uppercase;
 }
