--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,11 +1,12 @@
-.social {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.social__list {
   align-items: center;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  border-top: 1px solid rgb(217, 217, 217);
-  border-bottom: 1px solid rgb(217, 217, 217);
+	border-bottom: 1px solid rgb(217, 217, 217);
+	border-top: 1px solid rgb(217, 217, 217);
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	list-style: none;
+	margin: 0;
+	min-height: 64px;
+	padding: 0;
 }
