--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -7,6 +7,24 @@
   padding-top: 17px;
 }
 
+.example__container {
+  padding: 0 20px;
+}
+
+@media (min-width: $tablet-width) {
+  .example__container {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .example__container {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+}
+
 .example__title {
   margin: 0 0 25px;
   font-weight: 400;
