--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,38 +1,54 @@
 .page-header {
   position: relative;
-	min-height: 66px;
-	width: 100%;
+  min-height: 66px;
+  width: 100%;
 }
 
-.page-header__wrapper {
+.page-header__container {
   display: flex;
+  position: relative;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  padding-top: 12px;
-  padding-bottom: 12px; 
+  margin-left: auto;
+  margin-right: auto;
+  padding: 12px 20px;
+}
+
+@media (min-width: $tablet-width) {
+  .page-header__container {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__container {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
 }
 
 .page-header__logo {
   display: block;
   width: 100%;
-  max-width: 190px; 
+  max-width: 190px;
 }
 
 @media (min-width: $tablet-width) {
   .page-header__logo {
-    max-width: 176px; 
-  } 
+    max-width: 176px;
+  }
 }
 
 @media (min-width: $desktop-width) {
   .page-header__logo {
-    max-width: 202px; 
-  } 
+    max-width: 202px;
+  }
 }
 
 .page-header__btn {
-	display: none;
+  display: none;
 }
 
 .page-header__nav {
@@ -44,9 +60,6 @@
   .page-header__nav {
     display: block;
     margin: 0;
-    width: auto; 
-  } 
+    width: auto;
+  }
 }
-
-
-  
