--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,152 +1,153 @@
-.promo {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 26px;
-  text-align: center;
-  color: rgb(255, 255, 255);
-}
-
-@media (min-width: $tablet-width) {
-  .promo {
-    position: relative;
-    align-items: flex-start;
-    min-height: 810px;
-    padding-right: 200px;
-    padding-left: 90px;
-    color: $title-color;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .promo {
-    min-height: 572px;
-    padding: 45px 0 0 80px;
-  }
-}
-
-.promo::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  min-height: 306px;
-  width: 100%;
-  background-image: url("../img/index-background-mobile@1x.jpg");
-  background-color: $base-color;
-  background-position: bottom;
-  background-repeat: no-repeat;
-  z-index: -1;
-}
-
-@media (min-width: $tablet-width) {
-  .promo::before {
-    display: none;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .promo::before {
-    display: block;
-    position: absolute;
-    width: 50%;
-    min-height: 696px;
-    top: -90px;
-    right: 0;
-    left: inherit;
-    background-image: url("../img/index-background-desktop@1x.jpg");
-    background-color: $base-color;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-}
-
 .promo__container {
+  position: relative;
+  width: 100%;
   padding: 0 20px;
 }
 
 @media (min-width: $tablet-width) {
   .promo__container {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 0 30px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .promo__container {
-    padding-left: 70px;
-    padding-right: 70px;
+    padding: 0 110px;
+    width: 1200px;
   }
 }
 
-.promo__title {
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 36px;
-  font-family: "Oswald", "Arial", sans-serif;
-  padding-top: 25px;
-  margin-bottom: 23px;
-  margin-top: 0;
-  color: rgb(255, 255, 255);
+.promo {
+  background: url(../img/index-background-mobile@1x.jpg) no-repeat top;
+  background-size: 320px 305px;
 }
 
 @media (min-width: $tablet-width) {
-  .promo__title {
-    font-size: 60px;
-    line-height: 60px;
-    max-width: 520px;
-    margin-bottom: 45px;
-    text-align: left;
-    color: $title-color;
+  .promo {
+    background: 0 0;
   }
 }
 
-.promo__btn {
+.promo::before {
+  background-color: $base-color;
+  content: "";
+  height: 305px;
+  left: 0;
+  position: absolute;
+  top: 0;
   width: 100%;
-  font-size: 14px;
-  line-height: 18px;
-  padding-top: 11px;
-  padding-bottom: 11px;
-  margin-top: 3px;
+  z-index: -1;
 }
 
 @media (min-width: $tablet-width) {
-  .promo__btn {
-    font-size: 20px;
-    line-height: 20px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    width: 246px;
+  .promo::before {
+    content: none;
+  }
+}
+
+.promo__wrapper {
+  align-items: center;
+  color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  padding-top: 26px;
+  position: relative;
+  text-align: center;
+}
+
+@media (min-width: $tablet-width) {
+  .promo__wrapper {
+    align-items: flex-start;
+    color: $title-color;
+    padding: 0 200px 530px 90px;
+    position: relative;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .promo__btn {
-    order: 3;
+  .promo__wrapper {
+    min-height: 572px;
+    padding: 45px 0 0 80px;
+    width: 50%;
+  }
+}
+
+.promo__title {
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 36px;
+  margin: 0;
+  text-align: center;
+  width: 100%;
+}
+
+@media (min-width: $tablet-width) {
+  .promo__title {
+    color: $title-color;
+    font-size: 60px;
+    line-height: 60px;
+    text-align: left;
   }
 }
 
 .promo__content {
   font-size: 14px;
-  font-weight: 400;
-  font-family: "Oswald", "Arial", sans-serif;
-  color: rgb(255, 255, 255);
+  line-height: 14px;
+  margin-top: 23px;
+  text-align: center;
   text-transform: uppercase;
-  margin-bottom: 25px;
-  margin-top: 0;
 }
 
 @media (min-width: $tablet-width) {
   .promo__content {
     font-size: 20px;
-    line-height: 1;
-    margin-bottom: 45px;
-    color: $title-color;
+    line-height: 20px;
+    margin: 45px 0;
   }
 }
 
 @media (min-width: $desktop-width) {
   .promo__content {
     margin-bottom: 50px;
+  }
+}
+
+.promo__img {
+  margin-top: 13px;
+}
+
+@media (min-width: $tablet-width) {
+  .promo__img {
+    bottom: -29px;
+    height: 610px;
+    position: absolute;
+    right: 50%;
+    transform: translateX(50%);
+    width: auto;
+    z-index: -1;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .promo__img {
+    height: 499px;
+    right: -116px;
+    top: -47px;
+    width: 552px;
+  }
+}
+
+.promo__btn {
+  font-size: 14px;
+  line-height: 18px;
+  width: 100%;
+  padding: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .promo__btn {
+    font-size: 20px;
+    width: auto;
+    padding: 0 25px;
   }
 }
