--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,63 +1,160 @@
-.catalog {
-  display: flex;
-  flex-direction: column;
-}
-
 .catalog__container {
   padding: 0 20px;
 }
 
 @media (min-width: $tablet-width) {
   .catalog__container {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 0 30px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .catalog__container {
-    padding-left: 70px;
-    padding-right: 70px;
+    padding: 0 110px;
   }
 }
 
-.catalog__title {
-  color: $title-color;
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 60px;
-  margin-bottom: 27px;
-  margin-top: 15px;
-  padding: 0;
+.catalog {
+  border: 1px solid rgb(237, 237, 237);
+  margin-bottom: 28px;
 }
 
 @media (min-width: $tablet-width) {
-  .catalog__title {
-    font-size: 60px;
-    line-height: 60px;
-    margin-bottom: 25px;
-    margin-top: 27px;
-    padding: 0;
+  .catalog {
+    padding: 17px 30px 0;
+    border: 0;
+    margin-bottom: 15px;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .catalog__title {
-    margin-top: 12px;
+  .catalog {
+    padding: 0 40px;
+    margin-bottom: 25px;
   }
 }
 
-.catalog__list {
+.catalog__header {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 36px;
+  line-height: 60px;
+  font-weight: 400;
+  color: $title-color;
+  margin: 0 auto 28px;
+  padding: 14px 0 0;
+  border-top: 1px solid rgb(230, 230, 230);
+}
+
+@media (min-width: $tablet-width) {
+  .catalog__header {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 55px;
+    padding: 30px 30px 0;
+    border-top: none;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__header {
+    padding: 0 40px;
+    margin-bottom: 73px;
+  }
+}
+
+.catalog__plus-more-text {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  color: $title-color;
+  text-transform: uppercase;
+  margin: 0 0 8px;
+}
+
+.catalog__plus-text-small {
+  font-family: "Arial", sans-serif;
+  font-size: 12px;
+  line-height: 16px;
+  color: $content-color;
+  margin: 0 0 20px;
+}
+
+.catalog__plus {
+  text-align: center;
   margin: 0;
-  padding: 0;
-  list-style: none;
+  border-top: 1px solid rgb(237, 237, 237);
+  padding: 0 19px;
 }
 
-@media (min-width:768px) {
-  .catalog__list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.catalog__plus-all-icon {
+  margin-bottom: 20px;
+  margin-top: 25px;
+}
+
+@media (min-width: $tablet-width) {
+  .catalog {
+    padding: 17px 30px 0;
+    border: 0;
+    margin-bottom: 15px;
   }
 }
+
+@media (min-width: $tablet-width) {
+  .catalog__all {
+    width: 324px;
+    border: 1px solid rgb(230, 230, 230);
+    padding-bottom: 40px;
+    padding-top: 53px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+  @media (min-width: $tablet-width) {
+  .catalog__plus-more-text {
+    font-size: 20px;
+    line-height: 20px;
+    width: 135px;
+    margin: 0 auto 26px;
+  }
+}
+
+  @media (min-width: $tablet-width) {
+  .catalog__plus-all-link {
+    width: 250px;
+    margin-bottom: 0;
+  }
+}
+
+  @media (min-width: $tablet-width) {
+  .catalog__plus-all-icon {
+    width: 60px;
+    height: 60px;
+    margin-top: 0;
+    margin-bottom: 48px;
+  }
+}
+
+  @media (min-width: $tablet-width) {
+  .catalog__plus-text-small {
+    font-size: 16px;
+    line-height: 18px;
+    width: 170px;
+    margin-bottom: 84px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog {
+    padding: 0 40px;
+    margin-bottom: 25px;
+  }
+}
+
+  @media (min-width: $desktop-width) {
+  .catalog__all {
+    width: 245px;
+  }
+}
+
