--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,9 +1,18 @@
 .copyright {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
 }
 
-.copyright__logo {
-  margin-left: 25px;
+.copyright__link {
+  font-family: "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 16px;
+  color: $content-color;
+}
+
+@media (min-width: $tablet-width) {
+  .copyright__link {
+    margin-right: -6px;
+  }
 }
