--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,65 +1,106 @@
 .page-header {
-  position: relative;
-  min-height: 66px;
-  width: 100%;
-}
-
-.page-header__container {
   display: flex;
-  position: relative;
+  padding: 11px 20px;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 12px 20px;
 }
 
 @media (min-width: $tablet-width) {
-  .page-header__container {
-    padding-left: 30px;
-    padding-right: 30px;
+  .page-header {
+    padding: 25px 30px;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .page-header__container {
-    padding-left: 70px;
-    padding-right: 70px;
+  .page-header {
+    padding: 54px 110px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header--index {
+    position: relative;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header--index::before {
+    background: $base-color url(../img/index-background-desktop@1x.jpg) no-repeat;
+    background-size: auto 100%;
+    content: "";
+    min-height: 696px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 50%;
+    z-index: -1;
   }
 }
 
 .page-header__logo {
-  display: block;
-  width: 100%;
-  max-width: 190px;
+  width: 190px;
+  height: 37px;
 }
 
 @media (min-width: $tablet-width) {
   .page-header__logo {
-    max-width: 176px;
+    width: 175px;
+    height: 58px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .page-header__logo {
-    max-width: 202px;
+    width: 203px;
+    height: 60px;
   }
 }
 
-.page-header__btn {
-  display: none;
-}
-
-.page-header__nav {
-  display: none;
-  width: 100%;
+.page-header__toggle {
+  position: relative;
+  z-index: 7;
+  display: inline-block;
+  padding: 0;
+  width: 25px;
+  line-height: 30px;
+  margin-bottom: 6px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 @media (min-width: $tablet-width) {
-  .page-header__nav {
-    display: block;
-    margin: 0;
-    width: auto;
+  .page-header__toggle {
+    display: none;
   }
+}
+
+.page-header__toggle span {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  width: 100%;
+  height: 2px;
+  font-size: 0;
+  color: transparent;
+  background: $title-color;
+}
+
+.page-header__toggle span::after,
+.page-header__toggle span::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: $title-color;
+}
+
+.page-header__toggle span::after {
+  top: 7px;
+}
+
+.page-header__toggle span::before {
+  top: -7px;
 }
