--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,6 +1,114 @@
 .product {
   display: flex;
   flex-wrap: wrap;
+  box-sizing: border-box;
   position: relative;
-  padding-bottom: 22px;
+  border-top: 1px solid rgb(237, 237, 237);
+  padding: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .product {
+    width: 324px;
+    min-height: 430px;
+    background-color: rgb(242, 242, 242);
+    flex-direction: column;
+    align-items: center;
+    border-top: none;
+    padding-bottom: 17px;
+    padding-top: 165px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .product {
+    width: 245px;
+  }
+}
+
+.product:first-child {
+  border-top: none;
+}
+
+.product__img {
+  width: 140px;
+  height: 144px;
+  margin-bottom: -4px;
+}
+
+@media (min-width: $tablet-width) {
+  .product__img {
+    position: absolute;
+    bottom: 310px;
+    left: 0;
+    width: 324px;
+    height: auto;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .product__img {
+    width: 245px;
+  }
+}
+
+.product__info {
+  width: 138px;
+  padding: 20px 0;
+}
+
+@media (min-width: $tablet-width) {
+  .product__info {
+    width: 249px;
+    padding: 0;
+    margin: 0 0 32px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .product__info {
+    width: 169px;
+  }
+}
+
+.product__title {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  color: $title-color;
+  text-transform: uppercase;
+  width: 90px;
+  margin: 0 0 13px;
+}
+
+@media (min-width: $tablet-width) {
+  .product__title {
+    font-size: 20px;
+    width: 130px;
+    margin: 0 auto 20px;
+    text-align: center;
+  }
+}
+
+.product__link {
+  color: inherit;
+}
+
+.product__btn {
+  font-size: 16px;
+  line-height: 20px;
+  width: 100%;
+}
+
+@media (min-width: $tablet-width) {
+  .product__btn {
+    width: 150px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .product__btn {
+    width: 150px;
+  }
 }
