--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,12 +1,52 @@
+.social {
+  padding: 24px 0 15px;
+  border-top: 1px solid rgb(217, 217, 217);
+  border-bottom: 1px solid rgb(217, 217, 217);
+}
+
+@media (min-width: $tablet-width) {
+  .social {
+    border: 0;
+    margin-left: 30px;
+  }
+}
+
 .social__list {
-  align-items: center;
-	border-bottom: 1px solid rgb(217, 217, 217);
-	border-top: 1px solid rgb(217, 217, 217);
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	list-style: none;
-	margin: 0;
-	min-height: 64px;
-	padding: 0;
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 130px;
+  margin: 0 auto;
+}
+
+.social__link {
+  position: relative;
+}
+
+.social__link--vk {
+  left: -1px;
+}
+
+@media (min-width: $tablet-width) {
+  .social__link--vk {
+    top: 2px;
+    left: -3px;
+  }
+}
+
+.social__link--insta {
+  left: -6px;
+}
+
+.social__link--fb {
+  top: -2px;
+  left: -7px;
+}
+
+@media (min-width: $tablet-width) {
+  .social__link--fb {
+    left: -9px;
+  }
 }
