--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,12 +6,12 @@
 @import "blocks/catalog.scss";
 @import "blocks/contacts.scss";
 @import "blocks/copyright.scss";
+@import "blocks/description-table.scss";
 @import "blocks/example.scss";
-@import "blocks/main-menu.scss";
-@import "blocks/more.scss";
+@import "blocks/main-nav.scss";
 @import "blocks/page-header.scss";
-@import "blocks/page-main.scss";
 @import "blocks/product.scss";
+@import "blocks/products.scss";
 @import "blocks/program.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/programs.scss";
@@ -26,7 +26,6 @@ body {
   min-width: 320px;
   margin: 0 auto;
   padding: 0;
-
   font-family: "Oswald", "Arial", "Helvetica", sans-serif;
   font-weight: 400;
   font-size: 14px;
@@ -34,26 +33,22 @@ body {
   color: rgb(68, 68, 68);
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-}
-
 a {
   background-color: transparent;
   text-decoration: none;
 }
 
-.visually-hidden {
-  border: 0;
-  clip: rect(0 0 0 0);
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+  width: 1px;
   height: 1px;
   margin: -1px;
-  overflow: hidden;
+  border: 0;
   padding: 0;
-  position: absolute;
   white-space: nowrap;
-  width: 1px;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 
