--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,12 +2,14 @@
 @import "mixins.scss";
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 @import "blocks/advantages.scss";
+@import "blocks/add-product.scss";
 @import "blocks/button.scss";
 @import "blocks/catalog.scss";
 @import "blocks/contacts.scss";
 @import "blocks/copyright.scss";
 @import "blocks/description-table.scss";
 @import "blocks/example.scss";
+@import "blocks/gift.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/page-header.scss";
 @import "blocks/product.scss";
