--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,3 +4,5 @@ $base-color: rgb(104, 183, 56);
 $title-color: rgb(17, 17, 17);
 $content-color: rgb(68, 68, 68);
 $bg-color: rgb(242, 242, 242);
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
