--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -127,14 +127,42 @@
   background-image: url(../img/advantage-leaf@1x.png);
 }
 
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+  .advantages__item--leaf::before {
+    background-image: url(../img/advantage-leaf@2x.png);
+    background-size: 60px auto;
+  }
+}
+
 .advantages__item--powder::before {
   background-image: url(../img/advantage-powder@1x.png);
+}
+
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+  .advantages__item--powder::before {
+    background-image: url(../img/advantage-powder@2x.png);
+    background-size: 60px auto;
+  }
 }
 
 .advantages__item--dining::before {
   background-image: url(../img/advantage-dining@1x.png);
 }
 
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+  .advantages__item--dining::before {
+    background-image: url(../img/advantage-dining@2x.png);
+    background-size: 60px auto;
+  }
+}
+
 .advantages__item--clock::before {
   background-image: url(../img/advantage-clock@1x.png);
+}
+
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+  .advantages__item--clock::before {
+    background-image: url(../img/advantage-clock@2x.png);
+    background-size: 60px auto;
+  }
 }
