--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,4 +1,5 @@
 .copyright {
+  background-color: $bg-color;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -9,10 +10,4 @@
   font-size: 16px;
   line-height: 16px;
   color: $content-color;
-}
-
-@media (min-width: $tablet-width) {
-  .copyright__link {
-    margin-right: -6px;
-  }
 }
