--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,27 +1,22 @@
 .example {
   background-color: $bg-color;
-  display: flex;
-  flex-direction: column;
-  margin-top: 22px;
-  padding-bottom: 37px;
-  padding-top: 17px;
 }
 
 .example__container {
-  padding: 0 20px;
+  padding: 0 20px 34px;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: $tablet-width) {
   .example__container {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 0 30px 70px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .example__container {
-    padding-left: 70px;
-    padding-right: 70px;
+    padding: 0 110px;
   }
 }
 
