--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -21,6 +21,10 @@
   margin: 0 auto;
 }
 
+.social__svg {
+  fill: $content-color;
+}
+
 .social__link {
   position: relative;
 }
@@ -48,5 +52,32 @@
 @media (min-width: $tablet-width) {
   .social__link--fb {
     left: -9px;
+  }
+}
+
+.social__link:focus .social__svg,
+.social__link:hover .social__svg {
+  fill: $base-color;
+}
+
+.social__link:active .social__svg {
+  fill: $base-color;
+  opacity: 0.3;
+}
+
+@media (min-width: $tablet-width) {
+  .social__svg--vk {
+    width: 30px;
+    height: 16px;
+  }
+
+  .social__svg--insta {
+    width: 23px;
+    height: 23px;
+  }
+
+  .social__svg--fb {
+    width: 15px;
+    height: 28px;
   }
 }
